# poetry_demo

./: .gitignore  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 3623874816b2_init_commit.py  5cdb2af78f3c_init_commit.py  838c11273515_init_commit.py  cf3253a5d641_init_commit.py
src/poetry_fastapi/: .env  __init__.py  asgi.py  main.py
src/poetry_fastapi/api/v1/: category.py  permission.py  role.py  user.py
src/poetry_fastapi/common/: __init__.py  custom_exc.py  deps.py  get_db.py  logger.py  response_code.py  schedule.py  security.py  sys_casbin.py  tools_func.py
src/poetry_fastapi/config/: __init__.py  config.py
src/poetry_fastapi/core/: __init__.py  auth.py  router_v1.py  server.py
src/poetry_fastapi/crud/: __init__.py  base.py  role.py  user.py
src/poetry_fastapi/db/: __init__.py  base.py  base_class.py  redis.py  session.py
src/poetry_fastapi/models/: sys.py  sys_role.py  sys_user.py  user.py  users.py
src/poetry_fastapi/schemas/: __init__.py  auth_token.py  base.py  role.py  user.py
src/poetry_fastapi/utils/: __init__.py  encrypt.py  fast_dfs.conf  fast_dfs.py  utils_re.py
tests/: client.conf  test_fastdfs.py  test_password.py  test_poetry_fastapi.py  test_re.py
