[tool.poetry]
name = "poetry_fastapi"
version = "0.1.0"
description = ""
authors = ["zhouys <1767703660@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
gino = {extras = ["starlette"], version = "^1.0.1"}
alembic = "^1.8.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
